--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<iframe src="https://luminal.lol/40810x.html" title="Roblox,Ported By BW Games"></iframe>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Full Screen Embedded Website</title>
+    <style>
+        /* Ensures the body and html take up the full viewport height */
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden; /* Hides scrollbars if the iframe is sized exactly */
+        }
+        
+        /* Styles the iframe to fill the entire container (the body) */
+        .full-screen-iframe {
+            width: 100%;
+            height: 100%;
+            border: none; /* Removes the default iframe border */
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    </style>
+</head>
+<body>
+
+    <iframe src="https://luminal.lol/40810x.html" class="full-screen-iframe" title="Embedded website content"></iframe>
+
+</body>
+</html>
+
